--- a/public/styles/_utility.scss
+++ b/public/styles/_utility.scss
@@ -45,6 +45,7 @@
 .m35t { margin-top: 35px; }
 .m0auto { margin: 0 auto; }
 .pl3 { padding-left: 3px; }
+.pl5 { padding-left: 5px; }
 .m50t { margin-top: 50px; }
 .m75t { margin-top: 75px; }
 .m10l { margin-left: 10px; }
