--- a/public/styles/_utility.scss
+++ b/public/styles/_utility.scss
@@ -76,6 +76,7 @@
 .mb30 { margin-bottom: 30px; }
 .mb35 { margin-bottom: 35px; }
 .simpleFlex { display: flex; }
+.textLeft { text-align: left };
 .mrauto { margin-right: auto; }
 .mh100vh { min-height: 100vh; }
 .w85I { width: 85% !important; }
@@ -154,6 +155,7 @@
 .grow { flex-grow: 1; }
 .gap5 { grid-gap: 5px; }
 .gap10 { grid-gap: 10px; }
+.gap12 { grid-gap: 12px; }
 .gap15 { grid-gap: 15px; }
 .gap20 { grid-gap: 20px; }
 .gap25 { grid-gap: 25px; }
