--- a/public/styles/_global.scss
+++ b/public/styles/_global.scss
@@ -1,3 +1,7 @@
+.disabled {
+    pointer-events: none;
+}
+
 [disabled] {
     opacity: 0.55;
 }
@@ -30,6 +34,19 @@
     }
 }
 
+.scaleIn {
+    animation: scaleIn 5000ms ease-in-out infinite;
+}
+
+@keyframes scaleIn {
+    0% {
+        background-size: 125% !important;
+    }
+    100% {
+        background-size: 100% !important;
+    }
+}
+
 @media (max-width: $mobileMenuBreakPointL) {
     .hideOnMobileL {
         display: none;
@@ -45,6 +62,9 @@
 @media (max-width: $mobileMenuBreakPointS) {
     .hideOnMobileS {
         display: none;
+    }
+    input, textarea {
+        font-size: 16px !important;
     }
     .signInOptionsRow {
         span, a {
