--- a/public/styles/_theme.scss
+++ b/public/styles/_theme.scss
@@ -7,6 +7,7 @@ $mobileMenuBreakPointL: 1200px;
     --bg: #041b44;
     --teal: #3fa5e3;
     --main: #5D87FF;
+    --mainDark: rgba(0, 130, 198, 1);
 
     // Difficulties
     --easy1: #7DF9FF;
@@ -14,6 +15,7 @@ $mobileMenuBreakPointL: 1200px;
     --easy3: #c874fe;
 
     --cardBg: #04397b;
+    --success: #13DEB9;
     --borderRadius: 7px;
     --fontColor: white;
     --darkSub: #1c2a49;
