--- a/src/app/components/question/question.scss
+++ b/src/app/components/question/question.scss
@@ -1,6 +1,9 @@
 .questionButton {
     transition: var(--transition);
     &:hover {
-        background: white !important;
+        background: var(--darkMain) !important;
+    }
+    .MuiTouchRipple-root {
+        background: transparent !important;
     }
 }
